--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ excerpt_separator: ""
 pygments: true
 markdown: kramdown
 url: http://MikhailKoslowski.github.io
-title: MikhailKoslowski
-tagline: A log of everyday life
-description: My awesome new site
+title: Mikhail Koslowski
+tagline: ...
+description: ...
 paginate: 5
